<resources>
    <string name="app_name">Chess School</string>
    <string name="textView2Play">Խաղ երկուսով</string>
    <string name="textViewUs">Խաղաքարերի հնարավորությունները</string>
    <string name="textView_kanonner">Շախմատային կանոններ</string>
    <string name="toast_text1">Ընտրեք խաղաքարը</string>
    <string name="toast_text_shax">ՇԱԽ</string>
    <string name="clock_dialog_tytle">Խաղի ժամանակ</string>
    <string name="zinvori_poxarinum_dialog_text">Ընտրեք Խաղաքարը</string>
    <string name="activity_main_toolbar">CHESS  SCHOOL</string>
    <string name="dialog_end_game_textView2">Նոր Խաղ</string>
    <string name="dialog_end_game_textView3">Գլխավոր Մենյու</string>
    <string name="dialog_clock_vernagir">Ընտրեք Ժամանակը</string>
    <string name="clock_dialog_text1">3 րոպե</string>
    <string name="clock_dialog_text2">5 րոպե</string>
    <string name="clock_dialog_text3">10 րոպե</string>
    <string name="clock_dialog_text4">15 րոպե</string>
    <string name="clock_dialog_text5">20 րոպե</string>
    <string name="clock_dialog_text6">25 րոպե</string>
    <string name="clock_dialog_text7">30 րոպե</string>
    <string name="clock_dialog_text8">35 րոպե</string>
    <string name="clock_dialog_text9">40 րոպե</string>
    <string name="clock_dialog_text10">45 րոպե</string>
    <string name="clock_dialog_text11">50 րոպե</string>
    <string name="clock_dialog_text12">55 րոպե</string>
    <string name="clock_dialog_text13">60 րոպե</string>
    <string name="text_dasavorutyun">Քայլ 1. Ինչպես Կարգավորել Խաղատախտակը \n \n

Խաղի սկզբում խաղատախտակն այնպես է դրվում որ յուրաքանչյուր խաղացողի մոտ ներքևի աջ խաղադաշտի գույնը սպիտակ (կամ բաց) գույն ունենա:
        Այնուհետև խաղաքարերը դրվում են միշտ միևնույն ձևով: Երկրորդ շարքում զինվորներն են:
        Երկու նավակները տեղավորվում են անկյուններում, այնուհետև նրանց կողքին տեղադրվում են ձիերը, այնուհետև փղերը,
        և վերջապես թագուհին, որը միշտ դրվում է իր գույնի խաղադաշտի վրա (սպիտակ թագուհին՝ սպիտակ դաշտի վրա, սև թագուհին՝
        սև դաշտի վրա), իսկ արքան տեղավորվում է թագուհու կողքի միակ ազատ մնացած դաշտի վրա:
        \n \n \n
    Քայլ 2. Ինչպես Տեղաշարժել Խաղաքարերը
        \n \n

Վեց տարբեր խաղաքարերից յուրաքանչյուրը տեղաշարժվում են տարբեր կերպով։
        Խաղաքարերը չեն կարող տեղաշարժվել այլ խաղաքարերի միջով (չնայած, որ ձին կարող է ցատկել այլ խաղաքարերի վրայով),
        և երբեք չեն կարող տեղաշարժվել այլ քառակուսիներ, որտեղ գտնվում է իր սեփական խաղաքարերը:
        Սակայն, նրանք կարող են տեղաշարժվել գրավելու հակառակորդի խաղաքարի դիրքը և այնուհետև վերցնել հակառակորդի խաղաքարը:
        Խաղաքարերը, ընդհանուր առմամբ, տեղաշարժվում են այն դիրքերը, որտեղ նրանք կարող են վերցնել հակառակորդի խաղաքարը
        (տեղաբաշխվելով նրանց քառակուսիներում և այնուհետև փոխարինելով նրանց), այնտեղ՝ որտեղ պետք է
        պաշտպանել սեփական խաղաքարը, եթե նրանց վրա հարձակվում են վերցնելու նպատակով, կամ այնտեղ՝ որտեղ պետք է վերահսկել խաղատախտակի կարևոր քառակուսիները:
    </string>
    <string name="text_tagavor">Ինչպե՞ս Տեղաշարժել Արքան Շախմատում. \n \n
Արքան ամենակարևոր խաղաքարն է, բայց և ամենաթույլերից մեկը: Արքան կարող է քայլ կատարել միայն մեկ դաշտ՝ ցանկացած ուղղությամբ` վերև,
        ներքև, կողք, և անկյունագծով:
        Գտնվելով խաղատախտակի անկյունում՝ արքան գրոհում է 3 դաշտ, խաղատախտակի եզրին՝ 5 դաշտ, իսկ մնացած դաշտերում՝ 8 դաշտ:
        Արքան երբեք չի կարող քայլել շախի տակով (հարձակման ենթարկված դաշտերով,
        որտեղ այն կարող է վերցվել): Երբ արքան ենթարկվում է հարձակման մեկ այլ խաղաքարի կողմից՝ սա կոչվում է «շախ»: \n \n \n

        Ինչպե՞ս կատարել Փոխատեղում Շախմատում. \n \n
Մեկ այլ հատուկ կանոն, որը վերաբերվում է արքային՝ կոչվում է փոխատեղում:
        Այս քայլը թույլ է տալիս ձեզ միանգամից կատարել երկու կարևոր բան մեկ քայլով՝ տանել ձեր արքային ապահով տեղ
        (ըստ հնարավորին), և ձեր նավակն անկյունից հանել ու խաղի մեջ մտցնել:
        Եթե ձեր քայլն է և ցանկանում եք փոխատեղում կատարել, ապա պետք է տեղաշարժել արքան երկու խաղադաշտ դեպի նավակը,
        իսկ նավակը անկյունից տեղափոխել արքայի անմիջապես հակառակ կողմը: Սակայն որպեսզի փոխատեղումը կատարվի,
        հետևյալ պայմանները պետք է բավարարվեն։ \n \n

1.  Դա պետք է արքայի ամենաառաջին քայլը լինի. \n
2.  Դա պետք է նավակի ամենաառաջին քայլը լինի. \n
3.  Չի կարող լինել որևէ այլ շախմատային խաղաքար թագավորի և նավակի միջև. \n
4.  Թագավորը չի կարող լինել շախի տակ, կամ անցնել շախի ներքո. \n \n
Նկատեք, որ եթե դուք կատարում եք փոխատեղում թագավորի կողմ, ապա արքան ավելի մոտիկ է լինում խաղատախտակի կողմին:
        Սա կոչվում է կարճ փոխատեղում: Փոխատեղումը մյուս կողմի վրա, որտեղ թագուհին էր կանգնած,
        կոչվում է թագուհու կողմի (երկար) փոխատեղում: Անկախ նրանից թե որ կողմ է փոխատեղումը,
        արքան միշտ երկու խաղադաշտ է տեղափոխվում:

</string>
    <string name="text_taguhi">
        Ինչպե՞ս Տեղաշարժել Թագուհին Շախմատում. \n \n
Թագուհին ամենահզոր խաղաքարն է: Նա կարող է շարժվել ցանկացած ուղղությամբ ուղիղ գծով - առաջ, ետ, կողք կամ անկյունագծով,
        քանի դեռ նա չի անցնում այլ խաղաքարի վրայով: Եվ, ինչպես մյուս խաղաքարերը,
        եթե թագուհին շահում է հակառակորդի խաղաքարը կամ կանգնում է որևէ միջանկյալ դաշտի վրա, նրա քայլն ավարտվում է:
        Գտնվելով խաղատախտակի կենտրոնական դաշտերից մեկում՝ թագուհին միաժամանակ կարող է գրոհել մինչև 27 դաշտ,
        իսկ անկյունում՝ մինչև 21: Թագուհին ուժով գերազանցում է նավակին և մեկ թեթև խաղաքարին (ձի կամ փիղ),
        սովորաբար զիջում է 2 նավակին և մոտավորապես հավասար է 3 թեթև ֆիգուրի:
    </string>
    <string name="text_navak">
        Ինչպե՞ս Տեղաշարժել Նավակը Շախմատում. \n \n
Նավակը կարող է շարժվել այնքան հեռու ինչքան կամենա, բայց միայն առաջ, հետ, կամ երկու կողմերի վրա:
        Նավակները հատկապես հզոր խաղաքարեր են երբ նրանք պաշտպանում են միմյանց և աշխատում են միասին:
        Նավակը, որ դաշտում էլ, որ գտնվի, եթե ճանապարհին չկան այլ խաղաքարեր, միշտ վերահսկում է 14 դաշտ:
        Նա իր ուժով գերազանցում է թեթև ֆիգուրներին՝ փղին և ձիուն: Թեև սկզբնախաղում նավակները զարգացած չեն,
        նրանք կարող են մասնակցել փոխատեղմանը, որից հետո միջնախաղում դիրքային պայքարում գրոհում են ուղղահայաց գծերը:
        Վերջնախաղում նավակները հաճախ օգնում են անցունակ զինվորներին և մասնակցում են մրցակցի արքան խաղատախտակի որոշակի հատվածից
        «կտրելուն»:
    </string>
    <string name="text_pix">
        Ինչպե՞ս Տեղաշարժել Փիղը Շախմատում.  \n \n
Փիղը կարող է շարժվել այնքան հեռու ինչքան կամենա, բայց միայն անկյունագծերով:
        Յուրաքանչյուր փիղ սկսում է խաղը մի գույնի դաշտի վրա և միշտ մնում է այդ գույնի դաշտերի վրա:
        Փղերը միասին լավ են աշխատում, քանի որ նրանք ծածկում են մեկը մյուսի թուլությունները:
        Գտնվելով խաղատախտակի կենտրոնական դաշտերից մեկում՝ փիղը միաժամանակ կարող է գրոհել մինչև 13 դաշտ, իսկ անկյունում՝ մինչև 7:
         Սպիտակ դաշտով քայլող փղերը կոչվում են սպիտակադաշտ (կամ սպիտակաքայլ),
        իսկ սև դաշտերով քայլողները՝ սևադաշտ (կամ սևաքայլ) փղեր: Քանի որ փղին հասանելի է տախտակի դաշտերի միայն կեսը,
        այն բոլոր դաշտերը վերահսկող նավակից թույլ է: Ուժով փիղը մոտավորապես համարժեք է ձիուն:
        Վերջնախաղին մոտ, եթե զինվորները խաղատախտակի տարբեր կողմերում են գտնվում, փիղը դառնում է ձիուց ուժեղ,
        և հակառակը՝ ձին ավելի ուժեղ է, եթե զինվորները գտնվում են տախտակի մի կողմում:
    </string>
    <string name="text_dzi">
        Ինչպե՞ս Տեղաշարժել Ձին Շախմատում. \n \n
Ձիերը շարժվում են մյուս խաղաքարերից խիստ տարբեր՝ գնալով մեկ ուղղությամբ երկու դաշտ, և ևս մեկ դաշտ 90 աստիճանի անկյամբ,
        ճիշտ ինչպես "L" տառը: Ձիերը նաև միակ խաղաքարերն են, որ կարող են շարժվել այլ խաղաքարերի վրայով:
        Կարելի է այլ կերպ նկարագրել ձիու քայլը. ձին, գտնվելով սև գույնի դաշտում, նախ ուղղաձիգով կամ հորիզոնականով,
        դեպի իր կանգնած դաշտի հարևան սպիտակ դաշտն է շարժվում, ապա, շարժման ուղղությունը չփոխելով,
        անկյունագծով հարևան՝ նույնպես սպիտակ դաշտն է անցնում: Դժվար չէ նկատել, որ յուրաքանչյուր քայլով ձին փոխում է իր
        դաշտի գույնը: Որքան մոտ է ձին կենտրոնին, այնքան մեծանում է այն դաշտերի թիվը, ուր նա կարող է ցատկել:
        Գտնվելով խաղատախտակի կենտրոնական դաշտերից մեկում՝ ձին միաժամանակ կարող է գրոհել մինչև 8 դաշտ, եզրին՝ մինչև 4,
        իսկ անկյունում՝ 2: Ձիու ցատկի շնորհիվ, նրա արժեքը զգալիորեն մեծանում է «փակ դիրքերում», որտեղ մյուս խաղաքարերի
        (թագուհի, նավակ, փիղ) հեռահարությունը սահմանափակ է: Կենցաղային խոսքում հաճախ օգտագործվում է «ձիով քայլ անել»
        դարձվածքը, որը նշանակում է անել անսպասելի քայլ, արարք, գտնել հանկարծակի լուծում: Ձին օժտված է նաև խուսանավելու
        բացառիկ ունակությամբ. նա կարող է անցնել խաղատախտակի բոլոր դաշտերով՝ յուրաքանչյուրում հանգրվանելով միայն մեկ անգամ:
        Մաթեմատիկոսները հաշվել են, որ կարելի է ցույց տալ իրարից տարբեր 30 միլիոն այդպիսի ճանապարհ:
    </string>
    <string name="text_zinvor">
        Ինչպե՞ս Տեղաշարժել Զինվորը Շախմատում. \n \n
Զինվորները նման չեն մյուս խաղաքարերին, քանի որ նրանք շարժվում և շահում են հակառակորդի խաղաքարերը տարբեր կերպ։
        Նրանք շարժվում են առաջ, բայց հակառակորդի խաղաքարերը շահում են անկյունագծով:
        Զինվորները կարող են շարժվել առաջ միայն մեկ խաղադաշտ, բացառությամբ ամենաառաջին քայլի,
        երբ նրանք կարող են առաջ քայլել երկու դաշտով: Զինվորները կարող են շահել միայն անկյունագծով իրենց
        առջևում կանգնած հակառակորդի խաղաքարը: Նրանք երբեք չեն կարող քայլել կամ շահել դեպի հետ:
        Եթե զինվորի անմիջապես առջևում կա այլ խաղաքար, նա չի կարող առաջ շարժվել կամ շահել այդ խաղաքարը: \n \n \n

        Ինչպե՞ս Փոխարկել Զինվորը Շախմատում. \n \n
Զինվորներն ունեն մեկ այլ յուրահատկություն, այն է` եթե զինվորն առաջ շարժվելով հասավ վերջին հորիզոնականին
        այն կարող է փոխարինվել ցանկացած այլ խաղաքարով (սա կոչվում է փոխակերպում): Զինվորը կարող է փոխակերպվել ցանկացած խաղաքարի:
        Տարածված սխալ կարծիք կա, որ զինվորը կարող է փոխակերպվել միայն այն խաղաքարով որը վերցվել է: Դա ճիշտ ՉԷ:
        Զինվորը սովորաբար փոխակերպվում է թագուհու: Միայն զինվորները կարող են փոխակերպվել: \n \n \n

        Ինչպե՞ս կատարել "կողանցիկ վերցնում" շախմատում. \n \n
Զինվորներին վերաբերվող վերջին կանոնը կոչվում է "կողանցիկ" (ֆրանսերեն "en passant"-որ նշանակում է "անցնելու պահին"):
        Եթե զինվորը իր առաջին քայլին քայլ է կատարում երկու դաշտ, և այդ անելուց հետո կանգնում է հակառակորդի զինվորի կողքին
        (փաստորեն ցատկելով այն խաղադաշտի վրայով, որը հակառակորդի զինվորի հարվածի տակ է),
        ապա հակառակորդի զինվորը կարող է հաջորդ քայլին վերցնել այդ զինվորին այն դաշտում, որը հարվածի տակ է:
        Այդ հատուկ քայլը պետք է կատարվի անմիջապես այն բանից հետո, երբ զինվորն անցել է հարվածի տակով,
        հակառակ դեպքում հարվածի այս ձևն այլևս հասանելի չէ:


    </string>
    <string name="text_kanonner_vernagir">Կանոններ</string>
</resources>