<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:background="@drawable/papirus">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/dialog_clock_vernagir"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text1"
        android:textStyle="bold"
        android:textSize="20sp"></TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <TextView
                android:id="@+id/r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text1"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/r5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text2"
                android:textSize="20sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/r10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text3"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/r15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text4"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/r20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text5"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/r25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text6"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/r30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text7"
                android:textSize="20sp">
            </TextView>
            <TextView
                android:id="@+id/r35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:textColor="@color/text1"
                android:layout_weight="1"
                android:text="@string/clock_dialog_text8"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/r40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/text1"
            android:layout_weight="1"
            android:text="@string/clock_dialog_text9"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:id="@+id/r45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/text1"
            android:layout_weight="1"
            android:text="@string/clock_dialog_text10"
            android:textSize="20sp">
        </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/r50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/text1"
            android:layout_weight="1"
            android:text="@string/clock_dialog_text11"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:id="@+id/r55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/text1"
            android:layout_weight="1"
            android:text="@string/clock_dialog_text12"
            android:textSize="20sp">
        </TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/r60"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/text1"
            android:text="@string/clock_dialog_text13"
            android:textSize="20sp">
        </TextView>

    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>